# docr

./: .gitignore  .gitingore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/data/: cord_v2.yaml  manifest.yaml  synthetic.yaml
configs/eval/: ocr.yaml
configs/experiment/decoder/: d00_cogvit_ar_only.yaml  d00_r1_robust_ar.yaml  d00_x1_gated_cross_attention.yaml  d00_x2_pooled_cross_attention.yaml  d00_x2_r1_structured_corruption.yaml  d01_joint_gradient_diagnostics.yaml  d02_trimode_block16.yaml  d03_phase4_self_speculation.yaml
configs/experiment/visual/: v00_safe_backend_diagnostic.yaml  v01_patch_control.yaml  (+8 more)
configs/logging/: wandb.yaml
configs/model/: ar_baseline.yaml  diffusion_ocr.yaml  draft_refine.yaml  joint_qwen.yaml  joint_qwen_cogvit.yaml  joint_qwen_cogvit_cross_attention.yaml  joint_qwen_cogvit_cross_attention_pooled.yaml
configs/train/: ar.yaml  diffusion.yaml  draft_refine.yaml  joint.yaml
data/: README.md
scripts/: eval.py  evaluate_self_speculation.py  infer.py  prepare_manifest.py  train.py
src/docr/: __init__.py
tests/: test_ar_corruption.py  test_attention_masks.py  test_cogvit_vision_encoder.py  test_collate.py  test_cord_dataset.py  test_diffusion_noise.py  test_diffusion_training.py  test_gated_cross_attention.py  test_generation_metrics.py  test_joint_training.py  test_metrics.py  test_qwen_unified.py  test_sam_vision_encoder.py  test_schedules.py  test_self_speculative_decode.py  test_train_pipeline_helpers.py  test_trainer_logging.py  test_transforms.py  test_vision_encoder.py
(+28 files in other folders)
