[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docr"
version = "0.1.0"
description = "Research scaffold for diffusion-assisted OCR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "lightning",
    "transformers",
    "datasets",
    "hydra-core",
    "omegaconf",
    "wandb",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
